# checkars

checkars/: CMakeLists.txt  Lenta.cpp  Lenta.h  Rules.cpp  Rules.h  Visual.cpp  Visual.h  main.cpp
